# ffbc-backend

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: main.py
src/api/: router.py
src/api/admin_endpoints/: user.py
src/api/admin_endpoints/products/: measure_category.py  measure_value.py  product.py  product_category.py  product_modification.py  product_modification_value.py
src/api/dependencies/: current_user_from_refresh_token.py
src/api/endpoints/: __init__.py  auth.py  register.py  user.py
src/api/queries/: admin.py
src/common/: dto.py  entity.py  enums.py  repository.py  uow.py
src/common/admin/: enums.py  interfaces.py
src/common/admin/api/: base_router.py  decorators.py  extra_actions_router.py  types.py
src/common/database/: db.py  mixins.py
src/common/dependencies/: current_admin_user.py  current_authenticated_user.py  current_user.py
src/common/exceptions/: base_exceptions.py  error_codes.py  http_exceptions.py  repository_exceptions.py  use_case_exceptions.py
src/common/filters/: __init__.py  filters.py  filterset.py  interfaces.py  schemas.py
src/common/types/: db_types.py  pydantic_types.py  python_types.py
src/common/utils/: concurrency.py
src/config/: settings.py
src/containers/: __init__.py  gateways.py  repositories.py  use_cases.py
src/data/: uow.py
src/data/admin_repositories/: user.py
src/data/repositories/: blacklist_token.py  outstanding_token.py  user.py
src/domain/jwt_token/: enums.py
src/domain/user/: exceptions.py
src/utils/: auth.py
(+61 files in other folders)
