[tool.poetry]
name = "ffbc-backend"
version = "0.1.0"
description = ""
authors = ["Akim Abdulaev"]
readme = "README.md"
packages = [{include = "ffbc_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
python-multipart = "^0.0.6"
email-validator = "^2.0.0.post2"
pydantic = "^1.10.8"
emails = "^0.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
alembic = "^1.11.1"
uvicorn = "^0.22.0"
fastapi = "^0.95.2"
dependency-injector = "^4.41.0"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
websockets = "^11.0.3"
sqlalchemy = "2.0.22"
choicesenum = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
